--- a/intro.qmd
+++ b/intro.qmd
@@ -8,80 +8,253 @@ format:
 ---
 
 ## How it Works
-
-### Rock Paper Scissors
 ![Image by [Enzoklop](https://en.wikipedia.org/wiki/Rock_paper_scissors#/media/File:Rock-paper-scissors.svg) under [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0/)](rps.png){width=50%}
 
 - Rock defeats scissors, scissors defeats paper, and paper defeats rock
 - You get +1 point for a win, -1 for a loss, and 0 for ties
 
-### Competition Rounds
-There will be 5 rounds of RPS competitions. Each will have: 
-
-- 1 bot entered by each participant
-- 4 new house bots
-
-You'll play 200 games against each other bot twice. 
-
-Before each round, you'll be given the next round's name, which will be a hint about the strategies for all of those bots. 
-
-### House Bots
-Each house bot that enters during a round will stay for all future rounds. 
-
-The bot names reveal the bot strategies. The names will be anonymized during each round and then revealed afterwards (except for the final round where they will be revealed, but won't be that useful!).  
-
-### Submissions
-- For each round, you can submit as many times as you want up to the end of that round
-- Starting in the 2nd round, each submission *during* the round will receive a *test result* based on how that bot would have done in the *previous* round 
-  - Doing better in the previous round is a sign of progress, but may not actually result in a better score in the current round, which will have updated participant bots and new environment bots
-- The final submission before the end of the round will be entered into that round's competition (and will stay active for future rounds as well until you submit a new one)
-- At the end of each round, we'll run the tournament and show the results
-
-### Scoring
-At the end of each round, you'll get the following information: 
-
-- Matrix score report with results against every other bot
-  - Your score is reported as profit per 100 games
-- Game histories for each match
-
-Your cumulative score is the sum of all of the round scores, where the first round is worth 1x and each future round increases by 1.3x (_i.e._, round 2 is 1.3x, round 3 is 1.69x, etc.). 
-
-### Prizes
-There will be a small on-theme prize for the overall winner. 
-
-## Strategy
-Your mission is to play well against the environment bots without getting counterplayed by other participant bots. 
-
-### Strategy vs. House Bots
-The histories that are shown against the bots will generally be very useful in discovering patterns. Combine this with the bot names, and you'll be able to develop a strong strategy against these bots for future rounds. 
-
-### Strategy vs. Participant Bots
-Look for patterns. If participant bots are only trying to exploit environment bots, then they might be exploitable themselves. 
-
-## Writing Bots
-[Click here](botguide.qmd) for our guide on getting started writing RPS bots.
-
-## Schedule
-
-**2:00pm:** Get set up
-
-**2:15pm:** Begin Round 1
-
-**2:45pm:** Round 1 results, begin Round 2
-
-**3:15pm:** Round 2 results, begin Round 3
-
-**3:45pm:** Round 3 results, begin Round 4
-
-**4:15pm:** Round 4 results, begin Round 5
-
-**4:45pm:** Round 5 results, finish up/hang out
-
-**5:00pm:** End
-
 ## Why? 
-Fun! And thinking about strategy in a repeated game against a variety of opponents. 
+We think RPS is fun and while simple enough that everyone knows it and understands the rules, it's still a great domain for thinking about strategy in a repeated game against a variety of opponents. 
 
-From DeepMind in 2023:
+## Game Theory Equilibrium
 
-> In sequential decision-making, agent evaluation has largely been restricted to few interactions against experts, with the aim to reach some desired level of performance (e.g. beating a human professional player). We propose a benchmark for multiagent learning based on repeated play of the simple game Rock, Paper, Scissors.
+### Payoff matrix
+The core features of a game are its players, the actions of each player, and the payoffs. We can show this for RPS in the below payoff matrix, also known as normal-form.
+
+| Player 1/2 | Rock    | Paper   | Scissors |
+|--------|---------|---------|----------|
+| **Rock**   | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper**  | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors** | (-1, 1) | (1, -1) | (0, 0)   |
+
+The **payoffs** for Player 1 are on the left and for Player 2 on the right in each payoff outcome of the game. For example, the bottom left payoff is when Player 1 plays Scissors and Player 2 plays Rock, resulting in -1 for P1 and +1 for P2. 
+
+A **strategy** says which actions you would take for every state of the game.
+
+### Expected value
+**Expected value** in a game represents the average outcome of a strategy if it were repeated many times. It’s calculated by multiplying each possible outcome by its probability of occurrence and then summing these products.
+
+Suppose that Player 1 plays the strategy: 
+
+$$
+\begin{cases}
+r_1 = 0.5 \\
+p_1 = 0.25 \\
+s_1 = 0.25
+\end{cases}
+$$
+
+and Player 2 plays the strategy: 
+
+$$
+\begin{cases}
+r_2 = 0.1 \\
+p_2 = 0.3 \\
+s_2 = 0.6
+\end{cases}
+$$
+
+Let's add these to the matrix: 
+
+| Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
+|--------|---------|---------|----------|
+| **Rock ($r_1=0.5$)**  | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper ($p_1=0.25$)** | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors ($s_1=0.25$)** | (-1, 1) | (1, -1) | (0, 0)   |
+
+To simplify, let's just write the payoffs for Player 1 since payoffs for Player 2 will simply be the opposite: 
+
+| Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
+|--------|---------|---------|----------|
+| **Rock ($r_1=0.5$)**   | 0  | -1 | 1 |
+| **Paper ($p_1=0.25$)** | 1 | 0  | -1 |
+| **Scissors ($s_1=0.25$)** | -1 | 1 | 0 |
+
+Now we can multiply the player action strategies together to get a percentage occurrence for each payoff in the matrix: 
+
+| Player 1/2 | Rock ($r_2=0.1$)   | Paper ($p_2=0.3$)  | Scissors ($s_2=0.6$) |
+|--------|---------|---------|----------|
+| **Rock ($r_1=0.5$)**   | Val: 0 <br>Pr: $0.5(0.1) = .05$ | Val: -1 <br>Pr: $0.5(0.3) = .15$ | Val: 1 <br>Pr: $0.5(0.6) = .3$ |
+| **Paper ($p_1=0.25$)** | Val: 1 <br>Pr: $0.25(0.1) = .025$ | Val: 0  <br>Pr: $0.25(0.3) = .075$ | Val: -1 <br>Pr: $0.25(0.6) = .15$ |
+| **Scissors ($s_1=0.25$)** | Val: -1 <br>Pr: $0.25(0.1) = .025$ | Val: 1 <br>Pr: $0.25(0.3) = .075$ | Val: 0 <br>Pr: $0.25(0.6) = .15$ |
+
+Note that the total probabilities sum to 1 and each row and column sums to the probability of playing that row or column. 
+
+We can work out the expected value of the game to Player 1 (summing all payoffs multiplied by probabilities from top left to bottom right): 
+
+$\mathbb{E}[P_1] = 0(0.05) + -1(0.15) + 1(0.3) + 1(0.025) + 0(0.075) + -1(0.15) + -1(0.025) + 1(0.075) + 0(0.15) = 0.075$
+
+Therefore P1 is *expected* to gain 0.075 per game given these strategies. Since payoffs are reversed for P2, P2's expectation is -0.075 per game. 
+
+### Zero-sum
+We see in the matrix that every payoff is zero-sum, i.e. the sum of the payoffs to both players is 0. This means the game is one of pure competition. Any amount P1 wins is from P2 and vice versa. 
+
+### Nash equilibrium
+A Nash equilibrium means that no player can improve their expected payoff by unilaterally changing their strategy. That is, changing one's strategy can only result in the same or worse payoff (assuming the other player does not change). 
+
+In RPS, the Nash equilibrium strategy is to play each action $r = p = s = 1/3$ of the time. I.e., to play totally randomly. 
+
+Playing a combination of strategies is called a mixed strategy, as opposed to a pure strategy, which would select only one action. Mixed strategies are useful in games of imperfect information because it's valuable to not be predictable and to conceal your private information. In perfect information games, the theoretically optimal play would not contain any mixing (i.e., if you could calculate all possible moves to the end of the game). 
+
+The equilibrium RPS strategy is worked out below: 
+
+:::{.callout-tip collapse="true" appearance="minimal"}
+## Nash equilibrium strategy for RPS
+| Player 1/2 | Rock   | Paper  | Scissors |
+|--------|---------|---------|----------|
+| **Rock ($r$)**  | (0, 0)  | (-1, 1) | (1, -1)  |
+| **Paper ($p$)** | (1, -1) | (0, 0)  | (-1, 1)  |
+| **Scissors ($s$)** | (-1, 1) | (1, -1) | (0, 0)   |
+
+If Player 1 plays Rock with probability $r$, Paper with probability $p$, and Scissors with probability $s$, we have the following expected value equations for Player 2: 
+
+$\mathbb{E}[P_2(R)] = 0r -1p + 1s$
+
+$\mathbb{E}[P_2(P)] = 1r + 0p - 1s$
+
+$\mathbb{E}[P_2(S)] = -1r + 1p + 0s$
+
+(To compute each of these, sum the payoffs for each column with P2 payoffs and P1 probabilities. P2 payoffs because these are the expected values for P2 and P1 probabiltiies because the payoffs depend on the strategy probabilties of P1 against each of P2's actions.)
+
+Since no action dominates, we know that the EV of every strategic action should be equal (since if a certain strategy was best, we'd want to always play that strategy). 
+
+To solve for $r$, $p$, and $s$, we can start by setting these EVs equal: 
+
+$\mathbb{E}[P_2(R)] = \mathbb[P_2(P)]$
+
+$-1p + 1s = 1r - 1s$
+
+$2s = p + r$
+
+Then setting these equal: 
+
+$\mathbb{E}[P_2(R)] = \mathbb{E}[P_2(S)]$
+
+$-1p + 1s = -1r + 1p$
+
+$s + r = 2p$
+
+And finally setting these equal: 
+
+$\mathbb{E}[P_2(P)] = \mathbb{E}[P_2(S)]$
+
+$1r - 1s = -1r + 1p$
+
+$2r = s + p$
+
+Now we have these equations:  
+
+$$
+\begin{cases}
+2s = p + r \\
+s + r = 2p \\
+2r = s + p
+\end{cases}
+$$
+
+We can rewrite the 1st: 
+
+$r = 2s - p$
+
+And combine with the 2nd: 
+
+$s + (2s - p) = 2p$
+
+$3s = 3p$
+
+Resulting in: 
+
+$s = p$
+
+Now we can go back to the 2nd equation: 
+
+$s + r = 2p$
+
+And insert $s$ = $p$: 
+
+$s + r = 2s$
+
+And arrive at: 
+
+$r = s$
+
+We now see that all are equal: 
+
+$s = p = r$
+
+We also know that they must all sum to $1$: 
+
+$r + p + s = 1$
+
+Since they're all equal and sum to $1$, we can substitute $p$ and $s$ with $r$: 
+
+$3r = 1$
+
+$r = 1/3$
+
+So all actions are taken with probability $1/3$: 
+
+$r = p = s = 1/3 \quad \blacksquare$
+
+By symmetry, the same equilibrium strategy is true for Player 2. 
+:::
+
+Playing this strategy means that whatever your opponent does, you will breakeven! For example, think about an opponent that always plays Rock. 
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Equilibrium vs. Rock}) &= 0(r) + 1(p) + -1(s) \\
+&= 0(1/3) + 1(1/3) + -1(1/3) \\
+&= 0
+\end{split}
+\end{equation}
+$$
+
+How about the case of the opponent playing 60% Rock, 20% Paper, 20% Scissors? 
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Equilibrium vs. 622}) &= 0.6(\text{Equilibrium vs. Rock}) \\ 
+&\quad{}+ 0.2(\text{Equilibrium vs. Paper}) \\  
+&\quad{}+ 0.2(\text{Equilibrium vs. Scissors}) \\
+&= 0.6(0) + 0.2(0) + 0.2(0) \\
+&= 0
+\end{split}
+\end{equation}
+$$
+
+The random equilibrium strategy will result in 0 against any pure strategy and any combination of strategies including *622* and the opponent playing the random strategy. 
+
+### Exploiting vs. Nash
+The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing the worst possible strategy, yet equilibrium is still breaking even! 
+
+What's the best that we could do against Rock only? We could play **purely paper**. This is called a best response strategy. The payoffs are written for playing Paper and the probabilities indicate the opponent playing only Rock. 
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Paper vs. Rock}) &= 1(r) + 0(p) + -1(s) \\
+&= 1(1) + 0(0) + -1(0) \\
+&= 1
+\end{split}
+\end{equation}
+$$
+
+We'd win 1 each game playing Paper vs. Rock. 
+
+How about against the opponent playing 60% Rock, 20% Paper, 20% Scissors? Here we can see that because they are overplaying Rock, our best strategy is again to always play Paper. We write the payoffs for playing Paper and the probabilities according to the *622* strategy. 
+
+$$
+\begin{equation}
+\begin{split}
+\mathbb{E}(\text{Paper vs. 622}) &= 1(r) + 0(p) + -1(s) \\
+&= 1(0.6) + 0(0.2) + -1(0.2) \\
+&= 0.6 + 0 - 0.2 \\
+&= 0.4
+\end{split}
+\end{equation}
+$$
+
+Playing Paper vs. *622* results in an expected win of 0.4 per game. 
