--- a/intro.qmd
+++ b/intro.qmd
@@ -258,3 +258,5 @@ $$
 $$
 
 Playing Paper vs. *622* results in an expected win of 0.4 per game. 
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">gonna 3d print the exploitability of a player&#39;s rock-paper-scissors strategy over their strategy simplex <a href="https://t.co/cSXFKyI5E8">pic.twitter.com/cSXFKyI5E8</a></p>&mdash; Kevin a. Wang (@often_wang) <a href="https://twitter.com/often_wang/status/1838711689732132929?ref_src=twsrc%5Etfw">September 24, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
