--- a/index.qmd
+++ b/index.qmd
@@ -7,10 +7,6 @@ format:
 ---
 RPS.bot is an intro to opponent modeling through the game Rock Paper Scissors. 
 
-**Get started now!** Start with [Intro to RPS](intro.qmd). 
+**Get started now** with [Intro to RPS](intro.qmd). 
 
-Although seemingly very simple, RPS is valuable for thinking about strategy in a repeated game against a variety of opponents. 
-
-From DeepMind in 2023:
-
-> In sequential decision-making, agent evaluation has largely been restricted to few interactions against experts, with the aim to reach some desired level of performance (e.g. beating a human professional player). We propose a benchmark for multiagent learning based on repeated play of the simple game Rock, Paper, Scissors.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/b0SoKWLkmLU?si=0AQ3_NgHOe4tc4OU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
