--- a/rpstheory.qmd
+++ b/rpstheory.qmd
@@ -1,5 +1,5 @@
 ---
-title: "RPS Hackathon @ Recurse: Guide to Building a Bot"
+title: "RPS.bot: Theory"
 bread-crumbs: false
 format:
   html:
@@ -7,122 +7,6 @@ format:
 ---
 
 
-## Game Theory Equilibrium
-
-start with GTO then exploit
-
-RPS is a zero-sum game and the payouts are symmetrical as follows: 
-
-| Player 1/2 | Rock    | Paper   | Scissors |
-|--------|---------|---------|----------|
-| Rock   | (0, 0)  | (-1, 1) | (1, -1)  |
-| Paper  | (1, -1) | (0, 0)  | (-1, 1)  |
-|Scissors| (-1, 1) | (1, -1) | (0, 0)   |
-
-The Nash Equilibrium strategy is to play each action $r = p = s = 1/3$ of the time. 
-
-:::{.callout-tip collapse="true" appearance="minimal"}
-## Nash Equilibrium Strategy for RPS
-If Player 1 plays Rock with probability $r$, Paper with probability $p$, and Scissors with probability $s$, we have the following expected value equations for Player 2: 
-
-$\mathbb{E}(\text{R}) = -1p + 1s$
-
-$\mathbb{E}(\text{P}) = 1r - 1s$
-
-$\mathbb{E}(\text{S}) = -1r + 1p$
-
-Since no action dominates, we know that the EV of every strategic action should be equal  (since if a certain strategy was best, we'd want to always play that strategy). 
-
-To solve for $r$, $p$, and $s$, we can start by setting these EVs equal: 
-
-$\mathbb{E}(\text{R}) = \mathbb{E}(\text{P})$
-
-$-1p + 1s = 1r - 1s$
-
-$2s = p + r$
-
-Then setting these equal: 
-
-$\mathbb{E}(\text{R}) = \mathbb{E}(\text{S})$
-
-$-1p + 1s = -1r + 1p$
-
-$s + r = 2p$
-
-And finally setting these equal: 
-
-$\mathbb{E}(\text{P}) = \mathbb{E}(\text{S})$
-
-$1r - 1s = -1r + 1p$
-
-$2r = s + p$
-
-Now we have these equations:  
-
-$$
-\begin{cases}
-2s = p + r \\
-s + r = 2p \\
-2r = s + p
-\end{cases}
-$$
-
-We can rewrite the 1st: 
-
-$r = 2s - p$
-
-And combine with the 2nd: 
-
-$s + (2s - p) = 2p$
-
-$3s = 3p$
-
-Resulting in: 
-
-$s = p$
-
-Now we can go back to the 2nd equation: 
-
-$s + r = 2p$
-
-And insert $s$ = $p$: 
-
-$s + r = 2s$
-
-And arrive at: 
-
-$r = s$
-
-We now see that all are equal: 
-
-$s = p = r$
-
-We also know that they must all sum to $1$: 
-
-$r + p + s = 1$
-
-Since they're all equal and sum to $1$, we can substitute $p$ and $s$ with $r$: 
-
-$3r = 1$
-
-$r = 1/3$
-
-So all actions are taken with probability $1/3$: 
-
-$r = p = s = 1/3 \quad \blacksquare$
-:::
-
-Playing this strategy means that whatever your opponent does, you will breakeven! For example, think about an opponent that always plays Rock. 
-
-$$
-\begin{equation}
-\begin{split}
-\mathbb{E}(\text{Equilibrium vs. Rock}) &= r*0 + p*1 + s*-1 \\
-&= 1/3*0 + 1/3*1 + 1/3*-1 \\
-&= 0
-\end{split}
-\end{equation}
-$$
 
 ## Submitting Bots
 To get started, click the [Login](https://poker.camp/login/) button to the left and then go to [Submit Your Bot](https://poker.camp/rps-recurse/botsubmit.html). On the bot submission page, it's possible to submit with: 
