--- a/index.qmd
+++ b/index.qmd
@@ -9,4 +9,4 @@ RPS.bot is an intro to opponent modeling through the game Rock Paper Scissors.
 
 **Get started now** with [Intro to RPS](intro.qmd). 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/b0SoKWLkmLU?si=0AQ3_NgHOe4tc4OU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+![](history.jpeg)
