--- a/rpsbotchallenge.qmd
+++ b/rpsbotchallenge.qmd
@@ -7,7 +7,7 @@ format:
 ---
 RPS bot challenges are coming soon! 
 
-In these challenges, there are always suboptimal "house bots". Think bots that always play Rock or always play the sequence "RPSRPSRPS..."
+In these challenges, there are always suboptimal "house bots". Think bots that always play Rock or always play the sequence "RPSRPSRPS...".
 
 This means that playing the *game theory optimal* strategy will not maximize your payoff against them. 
 
@@ -25,7 +25,7 @@ Each week has a special rookie division for those who are entering for their fir
 ## Daily Challenge
 Play 200 games against a single RPS bot each day. 
 
-The bots will get roughly more difficult as the week goes on from Monday to Sunday. They'll be all different types -- LLM-generated, our own house bots, human-made bots from our weekly challenges, etc. 
+The bots will get roughly more difficult as the week goes on from Monday to Sunday. They'll be all different types -- our own house bots, human-made bots from our weekly challenges, LLM-generated, etc. 
 
 You can play against the bot with your own bot, manually, or both. We have tools to help write your own bot even if you don't know how to code. 
 
@@ -36,8 +36,8 @@ We periodically run virtual and in-person hackathons that we'll announce on RPS.
 
 The hackathons are run over a few hours with new rounds every 30 minutes. The format is similar to the weekly challenge above, where you face off against other human-made bots and our own house bots. We enter a new selection of progressively smarter house bots every round. Once a house bot enters, it stays in for subsequent rounds. 
 
-After each round, you can see the entire play history against each bot and a matrix score report. Once a house bot enters, it stays in for subsequent rounds. 
+After each round, you can see the entire play history against each bot and a matrix score report. 
 
-![](history.png)
+![](tournament90.jpg)
 
 You can submit multiple times during a round, and for each submission, you'll get a test result showing how your bot would have performed in the *previous* round. Doing better in the previous round is a sign of progress, but may not actually result in a better score in the current round, which will have updated participant bots and new house bots.
