--- a/rpsom.qmd
+++ b/rpsom.qmd
@@ -7,52 +7,58 @@ format:
 ---
 At the heart of opponent modeling is predicting your opponent's next move. While ![game theory optimal](intro.qmd#expected-value) play is an interesting mathematical exercise, it's often not actually the most rewarding strategy in practice. 
 
-Humans tend to be predictably irrational. This can manifest itself as someone having favorite moves, making "tilted" decisions, reacting to previous games in predictable ways, or having "leaks" like never throwing the same move three times in a row. 
+Humans tend to be predictably irrational. This can manifest itself as someone having favorite preferred moves, making "tilted" decisions, reacting to previous games in predictable ways, or having "leaks" like never throwing the same move three times in a row. 
 
 There can be levels to the game -- maybe you think your opponent expects you to play Rock, so then you expect that they'll play Paper, so you should play Scissors, but maybe they'll realize this and play Rock to counter the Scissors, so you should actually play Paper, and so on. 
 
-We use suboptimal bots in our challenge games to reinforce thinking strategically about how to respond to our opponents. The overall goal is to maximize payoffs, which is in practice countering opponent weaknesses while minimizing your own exploitability. 
+We use suboptimal bots in our challenge games to reinforce thinking strategically about how to respond to opponents. The overall goal is to maximize payoffs, which is in practice taking advantage of opponent weaknesses while minimizing your own exploitability. 
 
 ## Axes of opponent modeling
+There are two main axes for opponent modeling: opponents and games. 
 
 ### Types of opponents 
+**Bad static opponents:** Playing Rock 
 
-Bad static opponents: Playing Rock 
+**Better static opponents:** Playing 60% Rock, 20% Paper, 20% Scissors
 
-Better static opponents: Playing 60% Rock, 20% Paper, 20% Scissors
-
-Dynamic with no relation to game, i.e. a static Markov model: Playing RPSRPSRPS...
+**Dynamic with no relation to game, i.e. a static Markov model:** Playing RPSRPSRPS...
 
 ![](markovrps.png)
 
-Dynamic only related to limited subset of actions, like: 
+**Dynamic only related to limited subset of actions, like:** 
 
-1. Only our own actions
-2. Only opponent actions: 
-3. Only most recent action: 
+1. Only our own actions: Randomly play an action that we didn't play in the last 2 games
+2. Only opponent actions: Play the action that beats the most frequent of the opponent's last 3 moves
+3. Only most recent action: Copy the opponent's last move
 
-Dynamic related to entire history of actions: Play the move that beats the most frequent opponent move so far
+**Simple dynamic related to entire history of actions:** Play the move that beats the most frequent opponent move so far
 
-Adversarial prediction: 
+**Advanced dynamic relatd to entire history of actions:** Sophisticated adversarial prediction algorithm or set of algorithms
 
-### Types of games
-We tell you a single opponent's strategy
+### Types of games/knowledge
+Play a single known opponent (known meaning you know their entire strategy)
 
-We tell you multiple opponents' strategies
+Play multiple known opponents
 
-Play a single opponent with no advance knowledge of strategy
+Play a single unknown opponent
 
-Play multiple opponents with no advance knowledge of strategy
+Play multiple unknown opponents
 
-Play multiple opponents that include some suboptimal house bots and some human-created bots
+[Play multiple unknown opponents that include some suboptimal house bots and some human-created bots](rpsbotchallenge.qmd)
 
 ## Starter Code
-We provide Python starter code that you can submit directly on the Submission page or that you can download and submit through file upload. 
+We provide Python starter code that you can use to build RPS bots.  
 
-We provide code that by default plays randomly. The random strategy [guarantees a breakeven result](#game-theory-equilibrium), which won't be good enough to win because it won't take advantage of the suboptimal house bots! 
+The code by default plays randomly, which will [guarantee a breakeven result](intro.qmd#nash-equilibrium-strategy-for-rps) (and won't be very fun). 
+
+The main actions are in the `get_action` function: 
+
+```python
+def get_action(self, *, match_clock):
+  return random.choice([RockAction(), PaperAction(), ScissorsAction()])
+```
 
 ### Variables
-
 The profit so far in the match is stored in: 
 
 - `self.my_profit`
@@ -62,7 +68,6 @@ And the history of your actions and your opponent actions are stored in the foll
 - `self.history[]`
 
 ### Functions
-
 - `def __init__(self)`: 
   - Initializes profit `self.my_profit`
   - Initializes the history array `self.history[]`
@@ -70,51 +75,62 @@ And the history of your actions and your opponent actions are stored in the foll
   - This is run at the end of every game
   - It updates the history with `my_action` and `their_action` 
   - It updates the payoff with `my_payoff`
-  - `match_clock` can be used to see how much of your 30 second total time is remaining (this can generally be ignored) 
+  - `match_clock` is used to see how much of your 30 second total time is remaining (this can be ignored) 
 - `def get_action(self, *, match_clock)`: 
   - This is the main function where you run your strategy and return an action
   - You can return `RockAction()`, `PaperAction()`, or `ScissorsAction()`
 
-## Beating simple opponents
+## Beating simple known opponents
+It's a lot easier to beat your opponents when you know their strategy! This is still a worthwhile first exercise for thinking about which strategies beat which opponent strategies.
 
 ### Rockbot
+Opponent strategy: 100% Rock
+
+Counter-strategy: 100% Paper
+
+EV: +1 per game
+
+```python
+def get_action(self, *, match_clock):
+  return PaperAction()
+```
 
 ### r532bot
+Opponent strategy: 50% Rock, 30% Paper, 20% Scissors
+
+Counter-strategy: 100% Paper
+
+EV: $0.5(1) + 0.3(0) + 0.2(-1) = 0.3$ per game
+
+```python
+def get_action(self, *, match_clock):
+  return PaperAction()
+```
 
 ### RPSbot
+Opponent strategy: RPSRPSRPS...
+
+Counter-strategy: PSRPSRPSR...
+
+EV: +1 per game
+
+```python
+def get_action(self, *, match_clock):
+    moves = [PaperAction(), ScissorsAction(), RockAction()]
+    move_index = len(self.history) % 3  # Use history length to cycle
+    return moves[move_index]
+```
 
 ### Combination of the first 3 bots
 
 ### Mimicbot
+Opponent strategy: RPSRPSRPS...
+
+Counter-strategy: PSRPSRPSR...
+
+EV: +1 per game
 
 ### Beatprevbot
-
-### Freqbot 
-
-### Combination of all 6 bots		
-
-## General strategies
-In poker, many players start with GTO then exploit
-
-don't know the opponent in advance? can try to detect, or predictors
-
-## Problem Solving and Strategy
-The goal of the hackathon is to figure out how to adapt to your opponents (other participants and house bots)! 
-
-A few possible strategies are: 
-
-- Single out specific bots that are exploitable and write code to identify and exploit them
-  - Build an ensemble of exploits targeting many opponents
-- Attempt to predict the next move of each bot using a general algorithm
-- Use random play as a backup plan (see [below](#game-theory-equilibrium) for a full explanation of why this Nash equilibrium strategy always breaks even)
-
-## LLMs
-We welcome you to use LLMs like [Claude](https://claude.ai) or [ChatGPT](https://chatgpt.com). You can provide the starter code/code samples and get their help with implementing better strategies. 
-
-## Writing Your Own Bot
-Your bot will be facing off against a variety of participant bots and house bots. Here we illustrate some examples of how to write more complex bots. The main function to modify is `get_action`, which is the one that returns the move for each game. 
-
-### Win vs. Last Action
 This bot plays to beat the opponent's last action. 
 
 ```python
@@ -131,7 +147,12 @@ def get_action(self, *, match_clock):
       return random.choice([RockAction(), PaperAction(), ScissorsAction()])
 ```
 
-### Win vs. Opponent Playing "Win vs. Last Action"
+Opponent strategy: RPSRPSRPS...
+
+Counter-strategy: PSRPSRPSR...
+
+EV: +1 per game
+
 This bot plays to beat the opponent playing the above "win vs. last action" strategy.  
 
 If our last action is Rock, they would play Paper, so we should play Scissors. 
@@ -154,7 +175,13 @@ def get_action(self, *, match_clock):
       return random.choice([RockAction(), PaperAction(), ScissorsAction()])
 ```
 
-### Win vs. Full Opponent History Most Frequent
+### Freqbot 
+Opponent strategy: RPSRPSRPS...
+
+Counter-strategy: PSRPSRPSR...
+
+EV: +1 per game
+
 Instead of just looking at the last action, this bot plays to beat the most frequent opponent action over the entire history. 
 
 ```python
@@ -187,6 +214,29 @@ def get_action(self, *, match_clock):
   else: # 1st game play randomly 
       return random.choice([RockAction(), PaperAction(), ScissorsAction()])
 ```
+
+### Combination of all 6 bots		
+
+## General strategies
+In poker, many players start with GTO then exploit
+
+don't know the opponent in advance? can try to detect exact, detect deviation from GTO (direlecht?), or predictors
+
+go 1 more level on one of these 
+
+A few possible strategies are: 
+
+- Single out specific bots that are exploitable and write code to identify and exploit them
+  - Build an ensemble of exploits targeting many opponents
+- Attempt to predict the next move of each bot using a general algorithm
+- Use random play as a backup plan (see [below](#game-theory-equilibrium) for a full explanation of why this Nash equilibrium strategy always breaks even)
+- Simple strategies to do decently 
+
+### Win vs. Last Action
+
+
+### Win vs. Opponent Playing "Win vs. Last Action"
+
 
 ### Sometimes Playing Randomly 
 Since there are many suboptimal environment bots, breaking even by playing randomly won't be a good enough overall strategy, but could be valuable to consider in some situations. Here is an example of using random play in combination with another strategy. 
@@ -250,7 +300,10 @@ def get_action(self, *, match_clock):
 ## Predicting
 How to parametrize opponent
 Multiple hypotheses, run counterfactually, pick best one  
-Pattern hypotheses, compare to general pattern about something else 
+Pattern hypotheses, compare to general pattern about something else
+
+Beat the thing opponent played after last hand = the prev hand
+most recent same history 
 
 ### Iocaine Powder
 
